--- a/assets/css/index.styling.css
+++ b/assets/css/index.styling.css
@@ -5,5 +5,8 @@
 }
 
 body {
-  background-color: aqua;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  min-height: 100vh;
 }
