--- a/assets/css/main.styling.css
+++ b/assets/css/main.styling.css
@@ -30,10 +30,94 @@ input {
 
 .game-settings-form label {
   margin: 10px 0px;
+  display: block;
 }
+
 .game-settings-form label p {
   font-weight: 500;
   margin-bottom: 5px;
+}
+
+.game-settings-form input {
+  padding: 2px 5px;
+}
+
+.game-settings-form select {
+  padding: 2px 5px;
+}
+
+.board_cust {
+  margin: 10px 0px;
+}
+
+.board_cust section {
+  display: flex;
+  gap: 20px;
+  align-items: center;
+}
+
+.board_cust input {
+  width: 100px;
+}
+
+.no_error {
+  color: red;
+  font-size: 10px;
+  height: 12px;
+}
+
+.character_select_reminder {
+  text-align: center;
+  margin: 20px 0px;
+  font-size: 18px;
+  font-family: var(--press-start-2p);
+}
+
+.avatar_exhibition {
+  display: grid;
+  grid-template-columns: 60px 60px 60px;
+  grid-template-rows: 60px 60px;
+  gap: 10px;
+}
+
+.avatar_exhibition button {
+  cursor: pointer;
+  transition: all;
+  transition-timing-function: ease-in-out;
+  transition-duration: 200ms;
+}
+
+.avatar_exhibition button:hover {
+  background-color: #fca5a5;
+}
+
+.avatar_exhibition img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
+.player-wrapper {
+  display: flex;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.player_detail {
+  margin: 10px 0px;
+  width: fit-content;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+
+.player_detail img {
+  width: 60px;
+  height: 60px;
+  border-radius: 5000px;
+  background-color: #ddd;
+  object-fit: contain;
 }
 
 .start-btn-wrapper {
@@ -41,6 +125,10 @@ input {
   justify-content: center;
   align-items: center;
   margin: 20px 0px;
+}
+
+.hidden {
+  display: none;
 }
 
 .btn {
@@ -76,4 +164,12 @@ input {
 
 .btn2:hover {
   background-color: #555;
+}
+
+.gradient-text {
+  background: linear-gradient(90deg, #e31948 0%, #7c54ff 100%);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
 }
